{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 46,
  "lineage": "45b23797-6daa-e26e-dde8-f2ed53d4138a",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "4128",
                "uid": "560c9b7c-d5f8-4c6a-89b0-96f1772a6501"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_policy.ebs_csi_custom_policy",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.amazon_ebs_csi_driver_policy",
            "module.eks.aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_worker_node_policy",
            "module.eks.aws_iam_role_policy_attachment.attach_custom_ebs_policy",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.efs_csi_driver_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.aws_iam_role_policy_attachment.ssm_managed_instance_core",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:internet-gateway/igw-0ffe33ace8f48f828",
            "id": "igw-0ffe33ace8f48f828",
            "owner_id": "140147588849",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-igw"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-igw"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ffe33ace8f48f828",
            "id": "r-rtb-04ba854a5f9c7633f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04ba854a5f9c7633f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-04ba854a5f9c7633f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:route-table/rtb-04ba854a5f9c7633f",
            "id": "rtb-04ba854a5f9c7633f",
            "owner_id": "140147588849",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffe33ace8f48f828",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-AlinaRyabova-public-rt"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "rtb-04ba854a5f9c7633f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9feb8d781d5585",
            "region": "us-east-1",
            "route_table_id": "rtb-04ba854a5f9c7633f",
            "subnet_id": "subnet-0eee6dffa27dcb1dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a736fee7fde438f6",
            "region": "us-east-1",
            "route_table_id": "rtb-04ba854a5f9c7633f",
            "subnet_id": "subnet-04caa5d64b6f6c05c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05378c91face12c65",
            "region": "us-east-1",
            "route_table_id": "rtb-04ba854a5f9c7633f",
            "subnet_id": "subnet-0ef7ccbd334097b89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:subnet/subnet-0dc1c4bb66524d549",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc1c4bb66524d549",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-private-subnet-1"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-0dc1c4bb66524d549",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:subnet/subnet-001980cd73349932b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001980cd73349932b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-private-subnet-2"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-001980cd73349932b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:subnet/subnet-0a12ccd684548b31d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a12ccd684548b31d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-private-subnet-3"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-private-subnet-3"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-0a12ccd684548b31d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:subnet/subnet-0eee6dffa27dcb1dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eee6dffa27dcb1dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-public-subnet-1"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-0eee6dffa27dcb1dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:subnet/subnet-04caa5d64b6f6c05c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04caa5d64b6f6c05c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-public-subnet-2"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-04caa5d64b6f6c05c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:subnet/subnet-0ef7ccbd334097b89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef7ccbd334097b89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-public-subnet-3"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-public-subnet-3"
            },
            "vpc_id": "vpc-0e6ac879609bbc844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-0ef7ccbd334097b89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140147588849:vpc/vpc-0e6ac879609bbc844",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b88a56b5e6d90ed3",
            "default_route_table_id": "rtb-0c0ffac21c1ea29c8",
            "default_security_group_id": "sg-047150da100a1abc9",
            "dhcp_options_id": "dopt-0c536ebb501f94263",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6ac879609bbc844",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0ffac21c1ea29c8",
            "owner_id": "140147588849",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-AlinaRyabova-vpc"
            },
            "tags_all": {
              "Name": "vpc-AlinaRyabova-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}